--- a/android-app/ExpenseTracker2/app/src/main/AndroidManifest.xml
+++ b/android-app/ExpenseTracker2/app/src/main/AndroidManifest.xml
@@ -12,12 +12,14 @@
         <activity android:name=".EditActivity"
             android:label="Edit"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar"
+            android:windowSoftInputMode="stateAlwaysHidden"></activity>
         <activity
             android:name=".AddActivity"
             android:label="New Expense"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar"
+            android:windowSoftInputMode="stateAlwaysHidden"></activity>
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
